# yolo_build

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data.example.yaml
scripts/: train.py  validate.py
src/yolo_build/: __init__.py  dependencies.py  visualize.py
tests/: test_visualize.py
