[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-build"
version = "0.1.0"
description = "YOLO training, validation, and annotated-image visualization project."
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.3.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
